aster/tests/fail/inline-marker-decorator.astr
module inline-marker-decorator

attributes

  decorator the-plains(a) =
    id.plain(
      a
    )
